# shankompare

./: .gitignore  CLAUDE.md  General Features.md  LICENSE  README.md  pyproject.toml
.claude/skills/add-vfs-backend/: SKILL.md
.claude/skills/qt-threading/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/verify/: SKILL.md
assets/: generate_icon.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MANUAL.md  RELEASE-NOTES.md  REQUIREMENTS.md  ROADMAP.md
packaging/: launcher.py  shankompare.spec
scripts/: diagnose_clock_offset.py
src/shankompare/: __init__.py  __main__.py
src/shankompare/compare/: __init__.py  folder.py  hex.py  sync.py  text.py
src/shankompare/sessions/: __init__.py  profiles.py  sessions.py
src/shankompare/ui/: __init__.py  app.py  filters_dialog.py  folder_model.py  folder_view.py  help_dialog.py  hex_compare.py  main_window.py  panes.py  profile_dialog.py  remote_browse.py  resources.py  text_compare.py  theme.py  worker.py
src/shankompare/vfs/: __init__.py  archive.py  base.py  errors.py  local.py  memory.py  ops.py  sftp.py
tests/: test_archive_fs.py  test_exclude_filters.py  test_folder_compare.py  test_hex.py  test_icon.py  test_local_fs.py  test_memory_fs.py  test_ops.py  test_profiles.py  test_sessions.py  test_sftp_fs.py  test_sftp_offset.py  test_sync.py  test_text_diff.py  test_theme.py  test_ui_m4.py  test_ui_patches.py  test_ui_smoke.py  vfs_contract.py
