[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "shankompare"
version = "0.3.1"
description = "Cross-platform folder and file comparison tool with SFTP support"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8",
    "paramiko>=3.4",
    "keyring>=25",
    "platformdirs>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]
package = [
    "pyinstaller>=6.16",
]

[project.gui-scripts]
shankompare = "shankompare.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# QT_QPA_PLATFORM must be set before PySide6 is imported
"tests/test_ui_smoke.py" = ["E402"]
